# sidewinder

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  client.py  config.py  docker_build_and_push.sh  joe.txt  pyproject.toml  requirements.txt  run_server_in_docker.sh  server.py  server_oo.py  tester.py  utils.py  worker.py
.github/workflows/: build-docker-images.yml  ci.yml
components/client/: client.py  main.py  requirements.txt  utils.py
components/server/: main.py  requirements.txt  server.py  tester.py
components/server/config/: shard_generation_queries.yaml
components/server/data/: .gitignore  import_parquet_data.sql
components/worker/: main.py  requirements.txt  utils.py  worker.py
config/: shard_generation_queries.yaml
data/: .gitignore  import_tpch_10_parquet_data.sql  import_tpch_1_parquet_data.sql  load_generated_tpch_data.sql  utils.py
helm-chart/: Chart.yaml  install_helm_chart.sh  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  client-deployment.yaml  ebs-pvc.yaml  efs-pvc.yaml  global-secret.yaml  local-nvme-pvc.yaml  server-deployment.yaml  server-service.yaml  service-pvc.yaml  tls-secret.yaml  worker-deployment-arm.yaml  worker-deployment-x86.yaml  worker-deployment.yaml
include/macos/: duckdb.REMOVED.git-id
k8s/: Setup EKS EFS (shared storage).txt  auth_to_cluster.sh  efs-storageclass.yaml
k8s/eks-nvme-ssd-provisioner/: Dockerfile  docker_build_and_push.sh
k8s/eks-nvme-ssd-provisioner/manifests/: eks-nvme-ssd-provisioner.yaml  storage-local-static-provisioner.yaml
parser/: query.json  query.py  tester.py
queries/ssb/: q1.1.sql  q1.2.sql  q1.3.sql  q2.1.sql  q2.2.sql  q2.3.sql  q3.1.sql  q3.2.sql  q3.3.sql  q3.4.sql  q4.1.sql  q4.2.sql  q4.3.sql  qv1.1.sql
queries/tpc-h/: h14.sql  h17.sql  star01.sql
scripts/: build_s3_shards.sh  copy_ssb_data.sh  copy_tpch_data.sh  create_db_from_parquet.sh  create_duckdb_database.sh  generate_tpch_data.sh  run_integration_tests.sh
shard_generation/: build_shard_duckdb.py  build_shard_pyarrow.py  config.py  shard_generation_queries.yaml  utils.py
sidewinder/: client.py  server.py  utils.py  worker.py
src/: client.py  server.py  utils.py  worker.py
src/setup/: bootstrap.py  build_shards.py  create_duckdb_database_from_parquet.py  generate_tpch_parquet_data.py  utils.py
src/sidewinder/: client.py  config.py  constants.py  security.py  server.py  utils.py  worker.py
src/sidewinder/parser/: query.py
src/sidewinder/setup/: bootstrap.py  build_shards.py  create_duckdb_database_from_parquet.py  data_creation_utils.py  generate_tpch_parquet_data.py  mtls_utilities.py  tls_utilities.py
src/sidewinder/setup/config/: ssb_shard_generation_queries.yaml  tpch_shard_generation_queries.yaml
tpc-h_queries/: h01.sql  h08.sql  h13.sql  h16.sql  h17.sql  query_1.sql
