[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["./src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project]
name = "sidewinder-db"
version = "0.0.18"
description = "A Python-based Distributed Database"
readme = "README.md"
authors = [{ name = "Philip Moore", email = "prmoore77@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sidwinder", "sidewinder-db", "database", "distributed", "shard"]
dependencies = [
    "boto3==1.26.*",
    "botocore==1.29.*",
    "click==8.1.3",
    "codetiming==1.4.*",
    "duckdb==0.8.0",
    "duckdb-engine==0.7.*",
    "jmespath==1.0.*",
    "mgzip==0.2.*",
    "munch==3.0.*",
    "numpy==1.24.*",
    "pandas==2.0.*",
    "pglast==3.*",
    "psutil==5.9.*",
    "pyarrow==12.0.0",
    "python-dateutil==2.8.*",
    "pytz==2023.*",
    "PyYAML==6.*",
    "s3transfer==0.6.*",
    "six==1.16.*",
    "SQLAlchemy==2.0.*",
    "sqlparse==0.4.*",
    "urllib3==1.26.*",
    "websockets==11.0.*",
    "zstandard==0.21.*"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/prmoore77/sidewinder"

[project.scripts]
sidewinder-server = "sidewinder.server:main"
sidewinder-worker = "sidewinder.worker:main"
sidewinder-client = "sidewinder.client:main"
sidewinder-bootstrap = "sidewinder.setup.bootstrap:main"

[tool.bumpver]
current_version = "0.0.18"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"$',
    '^current_version = "{version}"$',
]
"src/sidewinder/__init__.py" = [
    '^__version__ = "{version}"$',
]
